--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
+body {
+    background-color: #1b4332;
+}
+
 .App {
-  text-align: center;
+    display: flex;
+    flex-direction: column;
+    width:500px;
+    height:500px;
+    margin-top: 50px;
+    margin-left:auto;
+    margin-right:auto;
+    background-color: #081c15;
+    border-radius: 5px;
+    padding-top: 50px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app--text {
+    color:white;
+    padding-left:30px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app--text > p {
+    font-weight: 100;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+span {
+    color:#40916C;
 }
 
-.App-link {
-  color: #61dafb;
+.button-div{
+    margin-top:15px;
+    display: flex;
+    justify-content: space-around;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+    background-color: #40916C;;
+    width:200px;
+    height:40px;
+    color:white;
+    border-radius: 5px;
+    padding:5px 10px;
+    font-size: 16px;
+}
+
+hr {
+    margin-top: 30px;
+    width: 90%;
+    height: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #b7d0e2;
+    border: 0 none;
+}
+
+.password-div {
+    padding-top: 20px;
+    display: grid;
+    grid-template-columns: auto auto;
+    gap:10px;
+    padding-left: 20px;
+}
+
+.password{
+    color:#4ad66d;
+    border-radius: 5px;
+    height:40px;
+    width:210px;
+    text-align: center;
+    padding-top: 10px;
+    background-color: #343434;
 }
